<resources>
    <string name="app_name">Learn-Kotlin-Flow</string>
    <string name="single_network_call">Single Network Call</string>
    <string name="series_network_calls">Series Network Calls</string>
    <string name="parallel_network_calls">Parallel Network Calls</string>
    <string name="room_database">Room Database</string>
    <string name="timeout">Timeout</string>
    <string name="catch_error">Catch Error</string>
    <string name="emit_all_error">EmitAll Error</string>
    <string name="completion">Completion</string>
    <string name="long_running_task">Long Running Task</string>
    <string name="two_long_running_tasks">Two Long Running Tasks</string>
    <string name="filter">Filter</string>
    <string name="map">Map</string>
    <string name="reduce">Reduce</string>
    <string name="search">Search</string>
    <string name="retry">Retry</string>
    <string name="retry_when">RetryWhen</string>
    <string name="retry_exponential_backoff">RetryExponentialBackoff</string>
    <string name="flow_on">FlowOn</string>
    <string name="result">Result</string>
    <string name="check_logcat">Check Logcat</string>
    <string name="understand_clod_flow">Understand Clod Flow</string>
    <string name="understand_hot_flow_stateflow">Understand Hot Flow - StateFlow</string>
    <string name="understand_hot_flow_shared_flow">Understand Hot Flow - SharedFlow</string>
    <string name="operators">Operators</string>
    <string name="map_operator">Map Operator</string>
    <string name="filter_operator">Filter Operator</string>
    <string name="zip_operator">Zip Operator -> Concurrent</string>
    <string name="flattenconcat_operator">FlattenConcat Operator</string>
    <string name="flatmapconcat_operator">FlatMapConcat Operator</string>
    <string name="transform">TRANSFORM</string>
    <string name="filterisinstance_operator">FilterIsInstance Operator</string>
    <string name="withindex_operator">WithIndex Operator</string>
    <string name="zip">ZIP</string>
    <string name="oneach_operator">OnEach Operator</string>
    <string name="merge">MERGE</string>
    <string name="merge_operator">Merge Operator -> Concurrent</string>
    <string name="flattenconcat_vs_flatmapconcat">FlattenConcat Vs FlatMapConcat</string>
    <string name="flatmapmerge_operator">FlatMapMerge Operator -> Concurrent</string>
    <string name="flatmaplatest_operator">FlatMapLatest Operator -> Concurrent</string>
    <string name="emitters">Emitters</string>
    <string name="zip_for_parallel_network_calls">Zip For Parallel Network Calls -> Concurrent</string>
    <string name="flow_internals_create_your_own_flow"><![CDATA[Flow Internals -> Create Your Own Flow]]></string>
    <string name="please_check_logcat_for_output">Please Check LogCat for Output</string>
</resources>