<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:paddingLeft="16dp"
    android:paddingTop="24dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:paddingBottom="24dp">

        <Button
            android:backgroundTint="@color/orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startOperatorsActivity"
            android:text="@string/operators"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white" />

        <Button
            android:backgroundTint="@color/light_orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFlowInternalActivity"
            android:text="@string/flow_internals_create_your_own_flow"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFlowOnActivity"
            android:text="@string/flow_on"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/light_yellow"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startColdFlowActivity"
            android:text="@string/understand_clod_flow"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/green"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startStateFlowActivity"
            android:text="@string/understand_hot_flow_stateflow"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/green"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startSharedFlowActivity"
            android:text="@string/understand_hot_flow_shared_flow"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/green"
            android:textColor="@android:color/white" />

        <Button
            android:backgroundTint="@color/yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startSingleNetworkCallActivity"
            android:text="@string/single_network_call"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/black"
            android:layout_marginBottom="16dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startSeriesNetworkCallsActivity"
            android:text="@string/series_network_calls"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startParallelNetworkCallsActivity"
            android:text="@string/parallel_network_calls"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startRoomDatabaseActivity"
            android:text="@string/room_database"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startCatchActivity"
            android:text="@string/catch_error"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startEmitAllActivity"
            android:text="@string/emit_all_error"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startCompletionActivity"
            android:text="@string/completion"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startLongRunningTaskActivity"
            android:text="@string/long_running_task"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startTwoLongRunningTasksActivity"
            android:text="@string/two_long_running_tasks"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFilterActivity"
            android:text="@string/filter"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startMapActivity"
            android:text="@string/map"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startReduceActivity"
            android:text="@string/reduce"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startSearchActivity"
            android:text="@string/search"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startRetryActivity"
            android:text="@string/retry"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startRetryWhenActivity"
            android:text="@string/retry_when"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startRetryExponentialBackoffActivity"
            android:text="@string/retry_exponential_backoff"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/white" />



    </LinearLayout>
</ScrollView>
