<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:paddingLeft="16dp"
    android:paddingTop="24dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:paddingBottom="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/transform"
            android:layout_margin="12dp"
            android:textStyle="bold"
            android:textColor="@color/red"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="useOfFilterOperator"
            android:text="@string/filter_operator"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="useOfFilterIsInstanceOperator"
            android:text="@string/filterisinstance_operator"
            android:textColor="@android:color/white" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="useOfMapOperator"
            android:text="@string/map_operator"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="useOfWithIndexOperator"
            android:text="@string/withindex_operator"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="useOfOnEachOperator"
            android:text="@string/oneach_operator"
            android:textColor="@android:color/white" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/zip"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            android:textColor="@color/red"
            />

        <Button
            android:backgroundTint="@color/green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="useOfZipOperator"
            android:text="@string/zip_operator"
            android:textColor="@android:color/white" />

        <Button
            android:backgroundTint="@color/green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="useOfZipOperatorToSimulateParallelNetworkCalls"
            android:text="@string/zip_for_parallel_network_calls"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/merge"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            android:textColor="@color/red"/>

        <Button
            android:backgroundTint="@color/green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="useOfMergeOperator"
            android:text="@string/merge_operator"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="useOfFlatMapConcatOperator"
            android:text="@string/flatmapconcat_operator"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="useOfFlattenConcatOperator"
            android:text="@string/flattenconcat_operator"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="useOfFlattenConcatVsFlatMapConcat"
            android:text="@string/flattenconcat_vs_flatmapconcat"
            android:textColor="@android:color/white" />

        <Button
            android:backgroundTint="@color/green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="useOfFlatMapMergeOperator"
            android:text="@string/flatmapmerge_operator"
            android:textColor="@android:color/white" />

        <Button
            android:backgroundTint="@color/green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="useOfFlatMapLatestOperator"
            android:text="@string/flatmaplatest_operator"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/emitters"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            android:textColor="@color/red"/>

    </LinearLayout>
</ScrollView>
